syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "Inventory";
option objc_class_prefix = "HLW";

package com.example;


message ItemRequest {
  string ownerId = 1;
  string sku = 2;
  uint32 quantity = 3;
}

message ItemReply {
  string message = 1;
}

service InventoryService {
  rpc decreaseInventory (ItemRequest) returns (ItemReply) {}
  rpc addInventory (ItemRequest) returns (ItemReply) {}
}

message LowInventoryErrorResponse {
  string ownerId = 1;
  string sku = 2;
  uint32 quantity = 3;
  uint32 available = 4;
}

message EmptyInventoryErrorResponse {
  string ownerId = 1;
  string sku = 2;
}

message NoProductErrorResponse {
  string ownerId = 1;
  string sku = 2;
}
